syntax = "proto3";

package graplinc.grapl.pipeline.v1beta1;

import "graplinc/common/v1beta1/types.proto";

// Metadata about a specific message, or its context
message Metadata {
  // A tenant (e.g. a customer) in Grapl
  graplinc.common.v1beta1.Uuid tenant_id = 1;

  // An operation (e.g. a request) across Grapl services
  graplinc.common.v1beta1.Uuid trace_id = 2;

  // Number of times this message has been retried
  uint32 retry_count = 3;
}

// A wrapper message for pipeline data. Includes useful metadata to help
// services determine what they should do with the inner_message.
message Envelope {
  // Metadata about this message
  Metadata metadata = 1;

  // Fully-qualified name of the protobuf type used to serialize inner_message
  //   ex: "graplinc.grapl.api.graph.v1beta1.GraphDescription"
  string inner_type = 2;

  // The serialized bytes of the inner message
  bytes inner_message = 3;
}
